Add some CPack variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,9 @@ include(CTest)
 
 add_subdirectory(src/libretro)
 include(cmake/GenerateAttributions.cmake)
+set(CPACK_BINARY_ZIP ON)
+set(CPACK_SOURCE_ZIP OFF)
+set(CPACK_GENERATOR "ZIP")
 if (BUILD_TESTING)
     message(STATUS "Enabling test suite.")
     enable_testing()
