--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -48,7 +48,7 @@ runs:
       if: ${{ !env.ACT && runner.os == 'Linux' && !contains(inputs.target, 'aarch64') }}
       uses: awalsh128/cache-apt-pkgs-action@latest
       with:
-        packages: cmake ninja-build libepoxy-dev ccache p7zip-full xvfb libx11-xcb-dev xdg-utils x11-xserver-utils
+        packages: cmake ninja-build libepoxy-dev ccache p7zip-full xvfb libx11-xcb-dev xdg-utils x11-xserver-utils retroarch
         version: 1.0
 
     - name: Install Dependencies (Linux x86_64/Android + act)
