--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,29 +1,6 @@
 name: Build (Internal)
 on:
   workflow_call:
-    secrets:
-      TESTFILE_REPO_TOKEN:
-        required: false
-      TESTFILE_REPO:
-        required: false
-      ARM7_BIOS:
-        required: false
-      ARM9_BIOS:
-        required: false
-      ARM7_DSI_BIOS:
-        required: false
-      ARM9_DSI_BIOS:
-        required: false
-      NDS_FIRMWARE:
-        required: false
-      DSI_FIRMWARE:
-        required: false
-      NDS_ROM:
-        required: false
-      DSI_NAND_ARCHIVE:
-        required: false
-      DSI_NAND:
-        required: false
     inputs:
       cmake-args:
         description: Additional arguments to pass to CMake.
@@ -76,14 +53,13 @@ on:
         type: string
         required: true
       test-suite:
-        description: Whether to run the test suite
+        description: Whether there will be a test suite based on this run's output
         type: boolean
         required: false
         default: false
 env:
   BUILD_DIR: "${{ github.workspace }}/${{ inputs.build-dir }}"
   DIST_DIR: "${{ github.workspace }}/${{ inputs.dist-dir }}"
-  TESTFILE_DIR: "${{ github.workspace }}/testfiles"
 jobs:
   build:
     strategy:
@@ -109,42 +85,17 @@ jobs:
         uses: ./.github/actions/deps
         with:
           target: ${{ inputs.target }}
-          test-suite: ${{ inputs.test-suite }}
-          testfile-repo: ${{ secrets.TESTFILE_REPO }}
-          testfile-repo-token: ${{ secrets.TESTFILE_REPO_TOKEN }}
-          dsi-nand-archive: ${{ secrets.DSI_NAND_ARCHIVE }}
 
       - name: Create build environment
         run: mkdir -vp "${{ env.BUILD_DIR }}"
 
       - name: Configure
-        if: ${{ !inputs.test-suite }}
         working-directory: "${{ env.BUILD_DIR }}"
         run: |
           cmake "${{ github.workspace }}" \
             -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" \
             -DMELONDS_REPOSITORY_URL="${{ vars.MELONDS_REPOSITORY_URL }}" \
             -DMELONDS_REPOSITORY_TAG="${{ vars.MELONDS_REPOSITORY_TAG }}" \
-            ${{ inputs.cmake-args }}
-
-      - name: Configure (with test suite)
-        if: ${{ inputs.test-suite }}
-        working-directory: "${{ env.BUILD_DIR }}"
-        run: |
-          cmake "${{ github.workspace }}" \
-            -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" \
-            -DMELONDS_REPOSITORY_URL="${{ vars.MELONDS_REPOSITORY_URL }}" \
-            -DMELONDS_REPOSITORY_TAG="${{ vars.MELONDS_REPOSITORY_TAG }}" \
-            -DBUILD_TESTING=ON \
-            -DRETROARCH="$(which retroarch)" \
-            -DARM7_BIOS="${{ env.TESTFILE_DIR }}/${{ secrets.ARM7_BIOS }}" \
-            -DARM9_BIOS="${{ env.TESTFILE_DIR }}/${{ secrets.ARM9_BIOS }}" \
-            -DARM7_DSI_BIOS="${{ env.TESTFILE_DIR }}/${{ secrets.ARM7_DSI_BIOS }}" \
-            -DARM9_DSI_BIOS="${{ env.TESTFILE_DIR }}/${{ secrets.ARM9_DSI_BIOS }}" \
-            -DNDS_FIRMWARE="${{ env.TESTFILE_DIR }}/${{ secrets.NDS_FIRMWARE }}" \
-            -DDSI_FIRMWARE="${{ env.TESTFILE_DIR }}/${{ secrets.DSI_FIRMWARE }}" \
-            -DDSI_NAND="${{ env.TESTFILE_DIR }}/${{ secrets.DSI_NAND }}" \
-            -DNDS_ROM="${{ env.TESTFILE_DIR }}/${{ secrets.NDS_ROM }}" \
             ${{ inputs.cmake-args }}
 
       - name: Build
@@ -167,7 +118,16 @@ jobs:
           if-no-files-found: error
           path: "${{ env.DIST_DIR }}"
 
-      - name: Run Test Suite
-        if: ${{ inputs.test-suite }}
-        working-directory: "${{ env.BUILD_DIR }}"
-        run: xvfb-run ctest --extra-verbose --exclude-regex example --output-on-failure
+      - name: Remove Extra Artifacts
+        run: |
+          rm -rf "${{ env.BUILD_DIR }}/_deps" "${{ env.BUILD_DIR }}/src/libretro/CMakeFiles"
+        # Remove various files that we won't need to pass to the test suite
+
+      - name: Upload CMake Build Directory
+        uses: actions/upload-artifact@v3
+        if: ${{ matrix.build-type == 'Debug' && inputs.test-suite }}
+        with:
+          name: "zzz-not-for-players-cmake-build-${{ inputs.archive-name }}-${{ matrix.build-type }}"
+          # So no one tries to download this on nightly.link
+          if-no-files-found: error
+          path: "${{ env.BUILD_DIR }}"
