--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,25 +43,13 @@ jobs:
       runs-on: ubuntu-latest
       lib-ext: so
       test-suite: true
-    secrets:
-      TESTFILE_REPO_TOKEN: ${{ secrets.TESTFILE_REPO_TOKEN }}
-      TESTFILE_REPO: ${{ secrets.TESTFILE_REPO }}
-      DSI_NAND_ARCHIVE: ${{ secrets.DSI_NAND_ARCHIVE }}
-      DSI_NAND: ${{ secrets.DSI_NAND }}
-      ARM7_BIOS: ${{ secrets.ARM7_BIOS }}
-      ARM9_BIOS: ${{ secrets.ARM9_BIOS }}
-      ARM7_DSI_BIOS: ${{ secrets.ARM7_DSI_BIOS }}
-      ARM9_DSI_BIOS: ${{ secrets.ARM9_DSI_BIOS }}
-      NDS_FIRMWARE: ${{ secrets.NDS_FIRMWARE }}
-      DSI_FIRMWARE: ${{ secrets.DSI_FIRMWARE }}
-      NDS_ROM: ${{ secrets.NDS_ROM }}
 
   linux-aarch64:
     name: Linux (aarch64)
     uses: ./.github/workflows/build.yaml
     with:
       archive-name: melondsds_libretro-linux-aarch64
-      target: linux-aaarch64
+      target: linux-aarch64
       runs-on: ubuntu-latest
       lib-ext: so
       cmake-args: -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc -DCMAKE_CXX_COMPILER=aarch64-linux-gnu-g++ -DPKG_CONFIG_EXECUTABLE=/usr/bin/aarch64-linux-gnu-pkg-config
@@ -90,3 +78,25 @@ jobs:
       lib-name: melondsds_libretro_ios
       cmake-args: -DENABLE_OGLRENDERER=OFF -DENABLE_JIT=OFF --toolchain ./cmake/toolchain/ios.toolchain.cmake -DPLATFORM=OS64 -DCMAKE_OSX_DEPLOYMENT_TARGET:STRING=13.0 -DDEPLOYMENT_TARGET=14 -DENABLE_STRICT_TRY_COMPILE_INT:BOOL=ON
       # Disabled OpenGL on iOS due to https://github.com/JesseTG/melonds-ds/issues/23
+
+  test-linux-x86_64:
+    name: Test Suite (Linux x86_64)
+    uses: ./.github/workflows/test.yaml
+    needs: [ linux-x86_64 ]
+    with:
+      archive-name: melondsds_libretro-linux-x86_64
+      target: linux-x86_64
+      runs-on: ubuntu-latest
+      lib-ext: so
+    secrets:
+      TESTFILE_REPO_TOKEN: ${{ secrets.TESTFILE_REPO_TOKEN }}
+      TESTFILE_REPO: ${{ secrets.TESTFILE_REPO }}
+      DSI_NAND_ARCHIVE: ${{ secrets.DSI_NAND_ARCHIVE }}
+      DSI_NAND: ${{ secrets.DSI_NAND }}
+      ARM7_BIOS: ${{ secrets.ARM7_BIOS }}
+      ARM9_BIOS: ${{ secrets.ARM9_BIOS }}
+      ARM7_DSI_BIOS: ${{ secrets.ARM7_DSI_BIOS }}
+      ARM9_DSI_BIOS: ${{ secrets.ARM9_DSI_BIOS }}
+      NDS_FIRMWARE: ${{ secrets.NDS_FIRMWARE }}
+      DSI_FIRMWARE: ${{ secrets.DSI_FIRMWARE }}
+      NDS_ROM: ${{ secrets.NDS_ROM }}
