--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,31 @@ include(GitInfo)
 
 option(TRACY_ENABLE "Build with Tracy support." OFF)
 
+if (IOS)
+    message(STATUS "JIT is disabled by default in iOS builds.")
+    set(DEFAULT_ENABLE_JIT OFF)
+else()
+    set(DEFAULT_ENABLE_JIT ON)
+endif ()
+option(ENABLE_JIT "Enable JIT support. Not supported on all platforms." ${DEFAULT_ENABLE_JIT})
+
+if (ANDROID OR IOS OR APPLE)
+    message(STATUS "OpenGL is disabled by default on this platform.")
+    set(DEFAULT_ENABLE_OPENGL OFF)
+else ()
+    set(DEFAULT_ENABLE_OPENGL ON)
+endif ()
+
+if (ANDROID)
+    set(DEFAULT_OPENGL_PROFILE OpenGLES2)
+else ()
+    set(DEFAULT_OPENGL_PROFILE OpenGL)
+endif ()
+option(ENABLE_OPENGL "Enable OpenGL support. Not supported on all platforms; defaults to OFF in such case." ${DEFAULT_ENABLE_OPENGL})
+set(ENABLE_OGLRENDERER ${ENABLE_OPENGL})
+set(OPENGL_PROFILE ${DEFAULT_OPENGL_PROFILE} CACHE STRING "OpenGL profile to use if OpenGL is enabled. Valid values are 'OpenGL', 'OpenGLES2', 'OpenGLES3', 'OpenGLES31', and 'OpenGLES32'.")
+set_property(CACHE OPENGL_PROFILE PROPERTY STRINGS OpenGL OpenGLES2 OpenGLES3)
+
 include(cmake/utils.cmake)
 include(cmake/FetchDependencies.cmake)
 include(cmake/ConfigureFeatures.cmake)
