--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -55,7 +55,7 @@ env:
   BUILD_DIR: "${{ github.workspace }}/${{ inputs.build-dir }}"
   TESTFILE_DIR: "${{ github.workspace }}/testfiles"
 jobs:
-  build:
+  test:
     runs-on: ${{ inputs.runs-on }}
     defaults:
       run:
