--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -104,7 +104,7 @@ jobs:
         run: |
           mkdir -vp "$CORES_PATH" "$INFO_PATH"
           cp -f "${{ env.BUILD_DIR }}/src/libretro/melondsds_libretro.${{ inputs.lib-ext }}" "$CORES_PATH"
-          cp -f "${{ github.workspace }}/melondsds_libretro.info" "$INFO_PATH/melondsds_libretro.info"
+          cp -f "${{ env.BUILD_DIR }}/melondsds_libretro.info" "$INFO_PATH/melondsds_libretro.info"
           cp -f "${{ env.BUILD_DIR }}/melondsds-LICENSE.txt" "$CORES_PATH"
 
       - name: Upload Artifact
