Don't react to .gitlab-ci.yml

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,6 +12,7 @@ on:
     paths-ignore:
       - "**.md"
       - ".gitignore"
+      - "*.gitlab-ci.yml"
 jobs:
   windows:
     name: Windows (x86_64)
