--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -113,8 +113,8 @@ jobs:
       DSI_FIRMWARE: ${{ secrets.DSI_FIRMWARE }}
       NDS_ROM: ${{ secrets.NDS_ROM }}
 
-  release:
-    name: Release Build
+  create-release:
+    name: Create Release
     needs: [ windows, macos, linux-x86_64, linux-aarch64, android, ios, tvos, test-linux-x86_64 ]
     if: "${{ startsWith(github.ref, 'refs/tags/v') }}"
     runs-on: ubuntu-latest
@@ -134,8 +134,8 @@ jobs:
       - name: Get Version From CMake
         uses: DarwinInnovation/cmake-project-version-action@v1.0
         id: cmake
-      - name: Require Versions to Match
-        if: "${{ !(steps.tag.outputs.version == steps.changelog.outputs.version && steps.tag.outputs.latest == steps.cmake.outputs.version) }}"
+      - name: Fail If Versions Don't Match
+        if: "${{ !(steps.tag.outputs.version == steps.changelog.outputs.version && steps.tag.outputs.version == steps.cmake.outputs.version) }}"
         env:
           VERSION_TAG: ${{ steps.tag.outputs.version }}
           VERSION_CHANGELOG: ${{ steps.changelog.outputs.version }}
@@ -145,8 +145,11 @@ jobs:
           exit 1
       - name: Download Artifacts
         uses: actions/download-artifact@v3
+        with:
+          path: artifact
       - run: ls -halR
       - name: Create Release
-        uses: dropseed/changerelease@v1.6.0
+        uses: anton-yurchenko/git-release@v5.0.2
         with:
           github_token: ${{ secrets.RELEASE_TOKEN }}
+          limit: 1
